--- a/college templates/homepage.html
+++ b/college templates/homepage.html
@@ -827,33 +827,28 @@
                     <tr>
                         <td><a href="mailto:omeeshadwive.edi@gmail.com" class="email">omeeshadwive.edi@gmail.com</a></td>
                         <td><a href="mailto:omeeshadwive.edi@gmail.com" class="email">Omeesha Dwivedi</a></td>
-                        <td><a href="#" class="email">-</a></td>
+                        <td><a href="#" class="email">9711617104</a></td>
                         <td><a href="mailto:omeeshadwive.edi@gmail.com" class="email">23scse1180219</a></td>
                     </tr>
                     <tr>
-                        <td><a href="mailto:john.doe@example.com" class="email">john.doe@example.com</a></td>
-                        <td><a href="#" class="email">John Doe</a></td>
-                        <td><a href="#" class="email">9876543210</a></td>
-                        <td><a href="#" class="email">23scse1180220</a></td>
+                        <td><a href="mailto:john.doe@example.com" class="email">rishangupta857@gmail.com</a></td>
+                        <td><a href="#" class="email">Rishan Rajesh Gupta</a></td>
+                        <td><a href="#" class="email">8333953605</a></td>
+                        <td><a href="#" class="email">23scse1180024</a></td>
                     </tr>
                     <tr>
-                        <td><a href="mailto:jane.smith@example.com" class="email">jane.smith@example.com</a></td>
-                        <td><a href="#" class="email">Jane Smith</a></td>
-                        <td><a href="#" class="email">8765432109</a></td>
-                        <td><a href="#" class="email">23scse1180221</a></td>
+                        <td><a href="mailto:jane.smith@example.com" class="email">ranjanashish2803@gmail.com</a></td>
+                        <td><a href="#" class="email">Ashish Ranjan</a></td>
+                        <td><a href="#" class="email">7488703573</a></td>
+                        <td><a href="#" class="email">23scse1180225</a></td>
                     </tr>
                     <tr>
-                        <td><a href="mailto:alex.jones@example.com" class="email">alex.jones@example.com</a></td>
-                        <td><a href="#" class="email">Alex Jones</a></td>
-                        <td><a href="#" class="email">7654321098</a></td>
-                        <td><a href="#" class="email">23scse1180222</a></td>
+                        <td><a href="mailto:alex.jones@example.com" class="email">mayankdhilor2@gmail.com</a></td>
+                        <td><a href="#" class="email">Mayank</a></td>
+                        <td><a href="#" class="email">8851552825</a></td>
+                        <td><a href="#" class="email">23scse1180232</a></td>
                     </tr>
-                    <tr>
-                        <td><a href="mailto:emma.wilson@example.com" class="email">emma.wilson@example.com</a></td>
-                        <td><a href="#" class="email">Emma Wilson</a></td>
-                        <td><a href="#" class="email">6543210987</a></td>
-                        <td><a href="#" class="email">23scse1180223</a></td>
-                    </tr>
+
                 </tbody>
             </table>
             
@@ -862,14 +857,30 @@
     <script>
     // Random facts array
     const facts = [
-        "jwdnuideo eriejri erhieu rorjh",
-        "bejr3ej3ioej3oej3oeje3n",
-        "ceije3iejioeji3eje3",
-        "d293893jmdwnejkbebnrnkem3ioej3",
-        "eei3jenui3nejken jen nl23i2jeio3nebdrh.",
-        "f.e3heh3ejk3 ndn edbejkndjednjk3n",
-        "gedjnkenefnekjwniehe 2jkenk2pmieiu3nejhdvbjwdkj",
-        "hjkenkenj3kknejwkeuiheuuiw2kmke",
+        "search for 'tomatoes' ",
+        "search for 'popcorn'",
+        "search for 'Hardrive replace'",
+        "search for 'Alteration'",
+        "search for 'Stapler Pins'",
+        "search for 'eyeshadow'",
+        "search for 'coconut water'",
+        "search for 'eclairs'",
+        "search for 'pens' ",
+        "search for 'speakers'",
+        "search for 'garlic'",
+        "search for 'slippers'",
+        "search for 'bedsheets'",
+        "search for 'cauliflower'",
+        "search for 'compass'",
+        "search for 'dosa batter'",
+        "search for 'paracetamol' ",
+        "search for 'stufftoy'",
+        "search for 'pendrive'",
+        "search for 'shoes'",
+        "search for 'chocolate'",
+        "search for 'nailpaint'",
+        "search for 'Fridge'",
+        
     ];
 
     // Toggle off-canvas
